# google-modules_aoc

./: BUILD.bazel  Kbuild  aoc-interface-gs201.h  aoc-interface-zuma.h  aoc-interface-zumapro.h  aoc-interface.h  aoc.c  aoc.h  aoc_channel_dev.c  aoc_uwb_platform_drv.c  aoc_v1.c
alsa/: BUILD.bazel  Kbuild  Makefile  aoc_alsa.h  aoc_alsa_card.c  aoc_alsa_compr.c  aoc_alsa_ctl.c  aoc_alsa_drv.c  aoc_alsa_hw.c  aoc_alsa_incall.c  aoc_alsa_nohost.c  aoc_alsa_path.c  aoc_alsa_pcm.c  aoc_alsa_voice.c  aoc_alsa_voip.c
usb/: BUILD.bazel  aoc_usb.h  xhci_hooks_impl_whi.c
